--- a/ecg_report.html
+++ b/ecg_report.html
@@ -1,1 +1,149 @@
-<table style='width:700px;margin-top:-10px;padding-top:-60px;padding-left:-50px;'><tr><td><h2 style='position: absolute; top: 1%; left: 42.7%; transform: translate(-50%, -50%);color:#fff;font-size:19px'>Heart rate</h2><h2 style='position: absolute; top: 3.4%; left: 41%; transform: translate(-50%, -50%);color:#fff;font-size:29px'>76.0 bpm</h2><img src='graph_img/rlogo.png' width='460px'/></td><td style='text-align: center;'><h2 style='margin: 0px;'>12 Lead ECG</h2><h5 style='margin: 0px;'>Date : 2025-07-16 14:10</h5></td></tr></table><h3 style='margin-top: 20px;padding-left:-30px;'>Patient Details</h3><table style='width:700px;'><tr><td>Full Name: ptr</td><td>Age:  years</td></tr><tr><td>Last Name : </td><td>Height :  cms</td></tr><tr><td>Gender : </td><td>Weight :  kgs</td></tr></table><br><h3 style='margin-top: 10px;padding-left:-30px;'>OBSERVATIONS</h3><br><br><br><h4 style='margin-top: 10px;margin-bottom:12px;'>Lead II Graph:</h4><div style='text-align:center; margin: 10px 0 20px 0;'><img src='lead2_graph_temp.png' style='border:2px solid #2453ff; border-radius:10px; background:#fff;' alt='Lead II Graph'><br></div><h3 style='margin-top: 20px;'>Observed Values</h3><table style='width:500px;border:1px solid #ff6600;border-radius:8px;padding:8px;font-size:16px;'><tr><th style='text-align:left;'>Parameter</th><th>Observed</th><th>Standard Range</th></tr><tr><td>Heart Rate</td><td>76.0 bpm</td><td>60 - 100 bpm</td></tr><tr><td>PR Interval</td><td>150.0 ms</td><td>120 - 200 ms</td></tr><tr><td>QRS Complex</td><td>66.0 ms</td><td>70 - 120 ms</td></tr><tr><td>QT Interval</td><td>0.0 ms</td><td>300 - 450 ms</td></tr><tr><td>QTc Interval</td><td>337.1 ms</td><td>300 - 450 ms</td></tr><tr><td>ST Segment</td><td>0.0 ms</td><td>80 - 120 ms</td></tr><tr><td>QRS Axis</td><td>--</td><td>Typically -30° to +90°</td></tr></table><h6 style='margin-top: 7px; margin-bottom:7px;padding-bottom:7px;'>Disclaimer: This ECG report generated is the interpretation of electrical parameters. Hence, it can vary in respect of time. PLEASE CONSULT YOUR PHYSICIAN FOR DIAGNOSIS </h6><br><br><h4 style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;'><u>CONCLUSION :<u></h4><div style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;'>1. Heart rate is normal.</div><div style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;'>2. PR interval is normal.</div><div style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;color: red;'>3. Narrow QRS Interval Detected.</div><div style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;color: red;'>4. QT is abnormal.</div><div style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;'>5. QTc is normal.</div><div style='margin-top: 17px;margin-bottom:7px;padding-bottom:7px;color: red;'>6. ST is abnormal.</div><br><h4 style='margin-top: 7px;margin-bottom:7px;padding-bottom:7px;'><u>RECOMMENDATIONS :</u></h4><br><br><br><br>
+
+    <html>
+    <head>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f7f7f7;
+            color: #000;
+            margin: 0;
+            padding: 0;
+        }
+        .header-bar {
+            background: linear-gradient(90deg, #ff6600 0%, #ffb347 100%);
+            color: #000;
+            padding: 24px 0 16px 0;
+            text-align: center;
+            border-radius: 0 0 24px 24px;
+            box-shadow: 0 2px 12px #ff660044;
+        }
+        .header-bar h1 {
+            color: #000;
+            margin: 0;
+            font-size: 2.2em;
+            letter-spacing: 2px;
+        }
+        .header-bar h3 {
+            color: #000;
+            margin: 6px 0 0 0;
+            font-weight: normal;
+            font-size: 1.1em;
+        }
+        .section {
+            background: #fff;
+            margin: 32px auto 0 auto;
+            border-radius: 18px;
+            box-shadow: 0 2px 16px #ff660022;
+            max-width: 800px;
+            padding: 32px 40px 32px 40px;
+        }
+        .section-title {
+            color: #ff6600;
+            font-size: 1.3em;
+            font-weight: bold;
+            margin-bottom: 18px;
+            border-bottom: 2px solid #ffb347;
+            padding-bottom: 6px;
+        }
+        .patient-info {
+            margin-bottom: 18px;
+            font-size: 1.1em;
+        }
+        .patient-info td {
+            padding: 6px 18px 6px 0;
+        }
+        .metrics-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 18px 0 24px 0;
+            font-size: 1.08em;
+        }
+        .metrics-table th {
+            background: #ff6600;
+            color: #fff;
+            padding: 10px 8px;
+            font-weight: bold;
+            border-radius: 6px 6px 0 0;
+        }
+        .metrics-table td {
+            padding: 10px 8px;
+            border-bottom: 1px solid #eee;
+        }
+        .metrics-table tr:nth-child(even) {
+            background: #fff7f0;
+        }
+        .metrics-table tr:nth-child(odd) {
+            background: #fff;
+        }
+        .lead-img {
+            display: block;
+            margin: 24px auto 18px auto;
+            border: 2.5px solid #2453ff;
+            border-radius: 12px;
+            background: #fff;
+            max-width: 95%;
+            max-height: 320px;
+        }
+        .conclusion, .recommendations {
+            margin-top: 18px;
+            font-size: 1.08em;
+        }
+        .conclusion-title, .recommendations-title {
+            color: #ff6600;
+            font-weight: bold;
+            margin-bottom: 8px;
+            font-size: 1.13em;
+            text-decoration: underline;
+        }
+        .disclaimer {
+            margin-top: 24px;
+            font-size: 0.98em;
+            color: #888;
+            background: #fffbe7;
+            border-radius: 8px;
+            padding: 10px 18px;
+            border-left: 4px solid #ff6600;
+        }
+    </style>
+    </head>
+    <body>
+        <div class="header-bar">
+            <h1>12 Lead ECG</h1>
+            <h3>Date: 2025-07-16 16:06</h3>
+        </div>
+        ...
+<img src='lead2_graph_temp.png' class='lead-img' alt='Lead II Graph' width='500' height='250'>
+            <div class="section-title">Observed Values</div>
+            <table class="metrics-table">
+                <tr>
+                    <th>Parameter</th>
+                    <th>Observed</th>
+                    <th>Standard Range</th>
+                </tr>
+                <tr><td>Heart Rate</td><td>76.0 bpm</td><td>60 - 100 bpm</td></tr>
+                <tr><td>PR Interval</td><td>160.0 ms</td><td>120 - 200 ms</td></tr>
+                <tr><td>QRS Complex</td><td>30.0 ms</td><td>70 - 120 ms</td></tr>
+                <tr><td>QT Interval</td><td>0.0 ms</td><td>300 - 450 ms</td></tr>
+                <tr><td>QTc Interval</td><td>198.5 ms</td><td>300 - 450 ms</td></tr>
+                <tr><td>ST Segment</td><td>0.0 ms</td><td>80 - 120 ms</td></tr>
+                <tr><td>QRS Axis</td><td>--</td><td>Typically -30° to +90°</td></tr>
+            </table>
+    
+            <div class="conclusion">
+                <div class="conclusion-title">Conclusion</div>
+    <div>1. Heart rate is normal.</div><div>2. PR interval is normal.</div><div style='color: red;'>3. Narrow QRS Interval Detected.</div><div style='color: red;'>4. QT is abnormal.</div><div style='color: red;'>5. QTc is abnormally shorted.</div><div style='color: red;'>6. ST is abnormal.</div></div>
+            <div class="recommendations">
+                <div class="recommendations-title">Recommendations</div>
+                <ul>
+                    <li>Consult your physician for a detailed diagnosis.</li>
+                    <li>Repeat ECG if symptoms persist or worsen.</li>
+                    <li>Maintain a healthy lifestyle and regular checkups.</li>
+                </ul>
+            </div>
+            <div class="disclaimer">
+                Disclaimer: This ECG report is an interpretation of electrical parameters and may vary over time. <b>PLEASE CONSULT YOUR PHYSICIAN FOR DIAGNOSIS.</b>
+            </div>
+        </div>
+    </body>
+    </html>
+    
